			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2836 2006/10/25 07:14:33 jinmei Exp $

<200610>
2006-10-25  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/route6d/route6d.c (riprecv): implemented more
	validation checks about incoming responses per RFC2080, and one
	additional heuristic check for safer operation.

2006-10-25  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/rip6query/rip6query.c (main): added some new options
	various options to customize the packet.

<200609>
2006-09-08  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c:
	  - stop updating MLDv1-compat-timer when an MLDv2 Query is received
	    in MLDv1-compat-mode (the 2006-09-06's commit is not enough)

2006-09-06  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c:
	  - stop updating MLDv1-compat-timer when an MLDv2 Query is received
	    in MLDv1-compat-mode (a bug due to a commit 2006-09-04)

	* freebsd5/sys/net/if_loop.c: 
	  let a loop-backed IPv6 packet go to lo0's BPF, while
	  software-emulated loopbacked ethernet frame still
	  goes to the physical I/F's BPF.

	  This closes the todo issue of the following item in 
	  CHANGELOG.2000.  

	  > Tue May 30 01:29:04 JST 2000  itojun@iijlab.net
	  ...
	  > XXX if_simloop() call from ip6_output() causes junk to be injected
	  > to bpf buffer.  we may need some fix separately from this commit.

	  (suggested by Max Laier)

2006-09-05  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet/in_msf.c, kame/sys/netinet6/in6_msf.c:
	does not search MSF by 'fmode' in case of SIOCGMSFILTER or 
	SIOCGIPMSFILTER.  (RFC3768 5.1.2 and 5.2.2)
	(suggested by Yu-Jung Lee)

2006-09-04  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/{in6_msf.c, mldv2.c}: fixed several bugs regarding
	  MLDv2 (suggested by Yu-Jung Lee)
	  - returns an error code when the MSF state change fails due to a
	    lack of memory
	  - fixed a bug that an MLDv2 State-Change Report is not always